import Socio from "./socio";

export default class SocioVIP extends Socio {
    



}
